--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-Page Object model Test automation framework using Selenium with Java, TestNG and Maven-
+Page Object model Test automation framework using Selenium with Java, TestNG and Maven
+
 This is a sample project to demonstrate what is page object model framework and how it can used in selenium to automate any application. TestNG is used as test framework.
 
 Dependency Java Maven
